--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,3 +1,7 @@
 .header-logo-container {
   padding: 20px 0 0 20px;
 }
+
+img {
+  cursor: default;
+}
