--- a/src/styles/ProductDetailPage.css
+++ b/src/styles/ProductDetailPage.css
@@ -23,6 +23,9 @@
 
 .product-price {
   display: flex;
+  align-items: center;
+  font-size: 1.6em;
+  display: flex;
 }
 
 input {
